; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_stream_memory.c_Seek.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_stream_memory.c_Seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_stream_memory_private = type { i64, i64 }

@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64)* @Seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Seek(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.vlc_stream_memory_private*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.vlc_stream_memory_private* @vlc_stream_Private(i32* %6)
  store %struct.vlc_stream_memory_private* %7, %struct.vlc_stream_memory_private** %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load %struct.vlc_stream_memory_private*, %struct.vlc_stream_memory_private** %5, align 8
  %10 = getelementptr inbounds %struct.vlc_stream_memory_private, %struct.vlc_stream_memory_private* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %8, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.vlc_stream_memory_private*, %struct.vlc_stream_memory_private** %5, align 8
  %15 = getelementptr inbounds %struct.vlc_stream_memory_private, %struct.vlc_stream_memory_private* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %4, align 8
  br label %17

17:                                               ; preds = %13, %2
  %18 = load i64, i64* %4, align 8
  %19 = load %struct.vlc_stream_memory_private*, %struct.vlc_stream_memory_private** %5, align 8
  %20 = getelementptr inbounds %struct.vlc_stream_memory_private, %struct.vlc_stream_memory_private* %19, i32 0, i32 1
  store i64 %18, i64* %20, align 8
  %21 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %21
}

declare dso_local %struct.vlc_stream_memory_private* @vlc_stream_Private(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
